kbus/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: test.testwoo.taewoo3s.huinnoaim.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test-1
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-1
                port:
                  number: 8000
